--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 
     /* Re-assign previous variables */
     body {
-        color: white;
+        color: #cccccc;
         background-color: black;
         text-decoration: none;
     }
@@ -58,8 +58,8 @@
 
     :link,
     :visited {
-        text-decoration: underline;
         cursor: pointer;
+        text-decoration: none;
     }
 }
 
