--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,15 @@
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 20px;
-    width: 95vw;
+    width: 50vw;
+}
+
+.banner {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 20px;
+    width: 70vw;
 }
 
 .button {
@@ -65,6 +73,14 @@
 
 /* For mobile devices */
 @media (max-device-width: 957px) {
+
+    .logo {
+        width: 80vw;
+    }
+
+    .banner {
+        width: 95vw;
+    }
 
     /* Increase font size */
     body {
