--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,9 @@
-.header {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-}
-
 .logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 20px;
-    width: 70%;
+    width: 50vw;
 }
 
 .banner {
@@ -18,7 +11,7 @@
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 20px;
-    width: 90%;
+    width: 70vw;
 }
 
 .button {
@@ -81,16 +74,12 @@
 /* For mobile devices */
 @media (max-device-width: 957px) {
 
-    .header {
-        width: 90%;
-    }
-
     .logo {
-        width: 80%;
+        width: 80vw;
     }
 
     .banner {
-        width: 95%;
+        width: 95vw;
     }
 
     /* Increase font size */
