--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,14 @@
     }
 }
 
+
 /* Make the Google map and calendar fill the width */
+.feature .instagram-media {
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    /* TODO make the font larger in google map 
+		 * https://developers.google.com/maps/documentation/maps-static/start might need API_KEY*/
+}
 .feature iframe {
     width: 100%;
     aspect-ratio: 4 / 3;
