--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
+
+div {
+font-family: 'Noto Serif KR', serif;
+
+}
+
+div {word-break:keep-all;}
+
+
 .logo {
     display: block;
     margin-left: auto;
