--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,14 @@ div {word-break:keep-all;}
     .button {
         width: 30vw;
     }
+
+    /* Make the Google map and calendar fill the width */
+    .instagram-media {
+        width: 100%;
+        /* aspect-ratio: 4 / 3; */
+        /* TODO make the font larger in google map 
+            * https://developers.google.com/maps/documentation/maps-static/start might need API_KEY*/
+    }
 }
 
 
