--- a/css/map.css
+++ b/css/map.css
@@ -2,7 +2,7 @@
 
 .google-maps {
     position: relative;
-    padding-bottom: 75%; // This is the aspect ratio
+    padding-bottom: 75%;  
     height: 0;
     overflow: hidden;
   }
