--- a/css/style.css
+++ b/css/style.css
@@ -150,3 +150,19 @@ div {word-break:keep-all;}
 #footer .feature {
     font-size: 80%;
 }
+
+/* https://www.labnol.org/internet/embed-responsive-google-maps/28333/ */
+
+.google-maps {
+    position: relative;
+    padding-bottom: 75%;  
+    height: 0;
+    overflow: hidden;
+  }
+  .google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+  }
