--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,18 +1,13 @@
-/* https://www.mpking.com/2021/04/making-google-calendar-embeddable.html */
-.responsiveCal {
-    position: relative; padding-bottom: 75%; height: 0; overflow: hidden;
-    }
-     
-    .responsiveCal iframe {
-    position: absolute; top:0; left: 0; width: 100%; height: 100%;
-    }
-    
-    @media all and (min-width: 768px) {
-        .deskContent {display:block;}
-        .phoneContent {display:none;}
-    }
-    
-    @media all and (max-width: 767px) {
-        .deskContent {display:none;}
-        .phoneContent {display:block;}
-    }
+.google-cal {
+    position: relative;
+    padding-bottom: 75%;  
+    height: 0;
+    overflow: hidden;
+  }
+  .google-cal iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+  }
