--- a/css/map.css
+++ b/css/map.css
@@ -5,6 +5,8 @@
     padding-bottom: 75%;  
     height: 0;
     overflow: hidden;
+    width: 100% !important;
+    height: 100% !important;
   }
   .google-maps iframe {
     position: absolute;
